Fix overflow with screen and 375px

--- a/frontend/styles/Login.module.css
+++ b/frontend/styles/Login.module.css
@@ -23,6 +23,7 @@
 
 .layout {
     height: 100vh;
+    overflow: auto;
 }
 
 @media screen and (max-width: 767px) {
